docs: remove starknet-privacy-toolkit references
- Updated README.md to be VestaZK standalone
- Removed Omar Espejel references
- Updated ARCHITECTURE.md, ROADMAP.md, SETUP.md
- Updated index.html to remove old toolkit links

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1436,7 +1436,7 @@
                 <div class="hero__actions">
                     <a class="btn-primary" href="#quick-start">Start tutorial</a>
                     <a class="btn-ghost" href="#security-faq">Security FAQ</a>
-                    <a class="btn-ghost" href="https://espejel.bearblog.dev/starknet-privacy-toolkit/" target="_blank" rel="noopener">Read Guide ↗</a>
+                    <a class="btn-ghost" href="https://github.com/anumukul/vestazk" target="_blank" rel="noopener">View Docs ↗</a>
                 </div>
                 <div class="hero__meta">
                     <span>Private transfers</span>
@@ -1444,9 +1444,8 @@
                     <span>ZK badges</span>
                 </div>
                 <div class="hero__links">
-                    <span>Made by Omar Espejel</span>
-                    <a href="https://x.com/omarespejel" target="_blank" rel="noopener noreferrer">@omarespejel</a>
-                    <a href="https://github.com/omarespejel" target="_blank" rel="noopener noreferrer">GitHub</a>
+                    <span>By VestaZK Team</span>
+                    <a href="https://github.com/anumukul/vestazk" target="_blank" rel="noopener noreferrer">GitHub</a>
                 </div>
             </div>
         </section>
@@ -1454,7 +1453,7 @@
         <div class="card" id="quick-start" style="margin-bottom: 24px;">
             <div class="card__header">
                 <h2>Quick Start (6 steps)</h2>
-                <p class="card__subtitle">Follow these steps in order for a smooth first run · <a href="https://espejel.bearblog.dev/starknet-privacy-toolkit/" target="_blank" rel="noopener" style="color: var(--accent);">Detailed guide ↗</a></p>
+                <p class="card__subtitle">Follow these steps in order for a smooth first run</p>
             </div>
             <ul class="tutorial-steps">
                 <li class="tutorial-step">
@@ -1479,7 +1478,7 @@
                 </li>
                 <li class="tutorial-step">
                     <span class="step-index">Step 6</span>
-                    <span class="step-text">Generate a Garaga‑verified badge proof on Sepolia to complete the privacy toolkit flow.</span>
+                    <span class="step-text">Generate a Garaga‑verified badge proof on Sepolia to complete the flow.</span>
                 </li>
             </ul>
         </div>
@@ -1662,7 +1661,7 @@
             <div class="card">
                 <div class="card__header">
                     <h2>Step 3 · Fund Private Balance</h2>
-                    <p class="card__subtitle">Transfer tokens into your Tongo account · <a href="https://espejel.bearblog.dev/starknet-privacy-toolkit/" target="_blank" rel="noopener" style="color: var(--accent);">Learn more ↗</a></p>
+                    <p class="card__subtitle">Transfer tokens into your Tongo account</p>
                 </div>
                 <p class="text-muted" style="font-size: 0.8em; margin-bottom: 15px; line-height: 1.4;">
                     Transfer tokens from your connected wallet into your Tongo account to prepare for private transfers. 
@@ -1710,7 +1709,7 @@
             <div class="card">
                 <div class="card__header">
                     <h2>Step 4 · Send Private Transfer</h2>
-                    <p class="card__subtitle">Send privately to any recipient · <a href="https://espejel.bearblog.dev/starknet-privacy-toolkit/" target="_blank" rel="noopener" style="color: var(--accent);">Learn more ↗</a></p>
+                    <p class="card__subtitle">Send privately to any recipient</p>
                 </div>
                 <p class="text-muted" style="font-size: 0.8em; margin-bottom: 15px; line-height: 1.4;">
                     Send a private transfer using a recipient's Tongo public key. The transfer amount is 
@@ -1771,7 +1770,7 @@
             <div class="card" id="badge-section" style="display: none; grid-column: 1 / -1;">
                 <div class="card__header">
                     <h2>Step 6 · ZK Badge</h2>
-                    <p class="card__subtitle">Prove your transfer tier with zero-knowledge cryptography · <a href="https://espejel.bearblog.dev/starknet-privacy-toolkit/" target="_blank" rel="noopener" style="color: var(--accent);">How it works ↗</a></p>
+                    <p class="card__subtitle">Prove your transfer tier with zero-knowledge cryptography</p>
                 </div>
                 
                 <!-- Network Notice -->
